TOC bug 1 beseitigt

--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -384,7 +384,7 @@ gui.dialog.about.sourceurl = http://jdservice.ath.cx/html/about_en.html
 gui.dialog.about.title = About JDownloader
 gui.dialogs.agb_tos.agbAccepted = I accept the terms of service
 gui.dialogs.agb_tos.description = The TOCs of %s have not been read and accepted.
-gui.dialogs.agb_tos.readAgb = Read %'s TOCs
+gui.dialogs.agb_tos.readAgb = Read %s's TOCs
 gui.dialogs.agb_tos.title = Termas of service not accepted
 gui.dialogs.helpDialog.btn.help = Help
 gui.dialogs.helpDialog.btn.ok = OK
