-Updated german.lng -Removed logging from JDFileChooser

--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -187,6 +187,7 @@ gui.config.eventmanager.trigger = Aktion
 gui.config.eventmanager.trigger.btn = Trigger ändern
 gui.config.fengshui.expertview = Erweiterte Ansicht
 gui.config.fengshui.fritzbox.title = Fritz!Box erkannt
+gui.config.fengshui.fritzbox.upnp.checkbox = Mitteilung nicht mehr zeigen
 gui.config.fengshui.fritzbox.upnpactive = Sie haben eine Fritz!Box, der Reconnect läuft über Upnp.<br> Sie brauchen keinen Reconnecteinstellungen zu tätigen.
 gui.config.fengshui.fritzbox.upnpinactive = Bitte aktivieren sie Upnp bei ihrer Fritz!Box <br><a href="http://%s">zur Fritz!Box</a><br><a href="http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp">Wikiartikel: Fritz!Box Upnp</a>
 gui.config.fengshui.password = Password:
@@ -447,6 +448,7 @@ gui.linkgrabber.menu.selection.free = Free
 gui.linkgrabber.menu.selection.mirror = Mirrorauswahl
 gui.linkgrabber.menu.selection.premium = Premium
 gui.linkgrabber.menu.selection.priority = Priorität
+gui.linkgrabber.packagetab.chb.extractAfterdownload = Entpacken
 gui.linkgrabber.packagetab.lbl.comment = Kommentar
 gui.linkgrabber.packagetab.lbl.name = Paketname
 gui.linkgrabber.packagetab.lbl.password = Archivpasswort
@@ -476,8 +478,9 @@ gui.linkinfo.download.notunderway = ist nicht in Bearbeitung
 gui.linkinfo.download.underway = ist in Bearbeitung
 gui.linkinfo.file = Datei
 gui.linkinfo.filesize = Dateigröße
-gui.linkinfo.package = Packet
+gui.linkinfo.package = Paket
 gui.linkinfo.password = Passwort
+gui.linkinfo.rate = Aktualisierungsrate
 gui.linkinfo.saveto = Speichern in
 gui.linkinfo.speed = Geschwindigkeit
 gui.linkinfo.title = Link Information: 
@@ -562,6 +565,7 @@ gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Support
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Addon (*.jdu) installieren
+gui.menu.action.install.filefilter = JD Addons
 gui.menu.action.install.mnem = I
 gui.menu.action.install.name = Addon installieren
 gui.menu.action.load.accel = CTRL+O
@@ -580,6 +584,12 @@ gui.menu.action.reconnect.accel = CTRL+R
 gui.menu.action.reconnect.desc = Einen Reconnect durchführen
 gui.menu.action.reconnect.mnem = R
 gui.menu.action.reconnect.name = Reconnect durchführen
+gui.menu.action.remove.links.desc = Entferne vollständige Downloads
+gui.menu.action.remove.links.name = Entferne vollständige Downloads
+gui.menu.action.remove.packages.desc = Entferne vollständige Packages
+gui.menu.action.remove.packages.name = Entferne vollständige Packages
+gui.menu.action.restart.desc = JDownloader neustarten
+gui.menu.action.restart.name = Restart
 gui.menu.action.save.accel = CTRL+S
 gui.menu.action.save.desc = Als DLC speichern
 gui.menu.action.save.mnem = S
@@ -608,12 +618,6 @@ gui.menu.action.wiki.accel = CTRL+W
 gui.menu.action.wiki.desc = jDownloader Wiki öffnen
 gui.menu.action.wiki.mnem = W
 gui.menu.action.wiki.name = Wiki öffnen
-gui.menu.action.restart.desc = JDownloader neustarten
-gui.menu.action.restart.name = Restart
-gui.menu.action.remove.packages.name = Entferne vollständige Packages
-gui.menu.action.remove.packages.desc = Entferne vollständige Packages
-gui.menu.action.remove.links.desc = Entferne vollständige Downloads
-gui.menu.action.remove.links.name = Entferne vollständige Downloads
 gui.menu.add = Hinzufügen
 gui.menu.addons = Addons
 gui.menu.edit = Bearbeiten
@@ -633,6 +637,7 @@ gui.packageinfo.loaded = Geladen
 gui.packageinfo.name = Name
 gui.packageinfo.packagesize = Paketgröße
 gui.packageinfo.password = Passwort
+gui.packageinfo.rate = Aktualisierungsrate
 gui.packageinfo.title = Paket Informationen:
 gui.reconnect.confirm = Wollen Sie sicher eine neue Verbindung aufbauen?
 gui.reconnect.failed = Reconnect fehlgeschlagen
@@ -885,7 +890,7 @@ linkinformation.download.notunderway = ist nicht in Bearbeitung
 linkinformation.download.status = Status
 linkinformation.download.underway = ist in Bearbeitung
 linkinformation.filesize.name = Dateigröße
-linkinformation.package.name = Packet
+linkinformation.package.name = Paket
 linkinformation.password.name = Passwort
 linkinformation.saveto.name = Speichern in
 linkinformation.speed.name = Geschwindigkeit
@@ -899,7 +904,7 @@ locale.lngs.czech = tschechisch
 locale.lngs.danish = dänisch
 locale.lngs.dutch = holländisch
 locale.lngs.english = englisch
-locale.lngs.finnish = finisch
+locale.lngs.finnish = finnisch
 locale.lngs.french = französisch
 locale.lngs.german = deutsch
 locale.lngs.greek = griechisch
@@ -918,6 +923,7 @@ main.start.logwarning.body = ACHTUNG. Das Loglevel steht auf %s und der Dateisch
 main.start.logwarning.title = Logwarnung
 main.status.active = an
 main.status.inactive = aus
+main.twitter.url = http://twitter.com/statuses/user_timeline/jdownloader.xml
 main.urls.faq = http://jdownloader.ath.cx/faq.php?lng=deutsch
 modules.packagemanager.downloadednewpackage.title2 = <p>Updates geladen.Ein Neustart ist nötig<br/> JDownloader jetzt neu starten?<hr>%s</p>
 modules.packagemanager.loadednewpackage.more = Weitere Informationen & Installationshinweise
@@ -973,6 +979,9 @@ plugins.errors.error = Fehler:
 plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
+plugins.host.gigasize.freeaccount.pass = Passwort
+plugins.host.gigasize.freeaccount.use = FreeAccount benutzen
+plugins.host.gigasize.freeaccount.user = eMail
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
 plugins.host.premium.info.files = Dateien
@@ -1026,6 +1035,7 @@ plugins.optional.folderwatch.name = FolderWatch
 plugins.optional.httpliveheaderscripter.action.end = Skripter verlassen
 plugins.optional.httpliveheaderscripter.action.start = Scriptersteller starten
 plugins.optional.httpliveheaderscripter.gui.avefile = Speichern
+plugins.optional.httpliveheaderscripter.gui.desc = XML-File
 plugins.optional.httpliveheaderscripter.gui.importff.message = Fügen Sie hier den Firefox Liveheader Mitschnitt ein
 plugins.optional.httpliveheaderscripter.gui.importff.title = Firefox Liveheader Mitschnitt importieren
 plugins.optional.httpliveheaderscripter.gui.menu.edit = Bearbeiten
@@ -1070,6 +1080,7 @@ plugins.optional.jdlowspeed.minspeed = Mindestgeschwindigkeit für einen Downloa
 plugins.optional.jdlowspeed.name = LowSpeed Erkennung
 plugins.optional.jdlowspeed.rsonly = Nur Raidshare überwachen
 plugins.optional.jdshutdown.name = JDShutdown
+plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.langfileeditor.addKey = Schlüssel hinzufügen
 plugins.optional.langfileeditor.adoptDefaults = Standardwert(e) übernehmen
 plugins.optional.langfileeditor.adoptDefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
@@ -1090,6 +1101,7 @@ plugins.optional.langfileeditor.editSelectedValues = Ausgewählte(n) Schlüssel 
 plugins.optional.langfileeditor.editValue = Wert bearbeiten
 plugins.optional.langfileeditor.entries = Einträge
 plugins.optional.langfileeditor.file = Datei
+plugins.optional.langfileeditor.fileFilter = LanguageFiles (*.lng)
 plugins.optional.langfileeditor.firstKey = Erster Key
 plugins.optional.langfileeditor.key = Schlüssel
 plugins.optional.langfileeditor.keychart = Schlüsselübersicht
@@ -1101,6 +1113,7 @@ plugins.optional.langfileeditor.languageFileValue = Language File Wert
 plugins.optional.langfileeditor.name = JDLangFileEditor
 plugins.optional.langfileeditor.new = Neu
 plugins.optional.langfileeditor.ok = OK
+plugins.optional.langfileeditor.patternEntry = <Eintrag passt auf Pattern>
 plugins.optional.langfileeditor.pickMissingColor = Farbe für fehlende Einträge auswählen
 plugins.optional.langfileeditor.pickOldColor = Farbe für alte Einträge auswählen
 plugins.optional.langfileeditor.reload = Neu laden
@@ -1148,6 +1161,7 @@ plugins.optional.streamsharingtool.action.validate.linksfound = Link(s) gefunden
 plugins.optional.streamsharingtool.gui.comment.defaultcomment = StreamingShare-DLC
 plugins.optional.streamsharingtool.gui.comment.question = DLC Kommentar eingeben
 plugins.optional.streamsharingtool.gui.comment.title = DLC Kommentar eingeben:
+plugins.optional.streamsharingtool.gui.desc = StreamShraring-Datei
 plugins.optional.streamsharingtool.gui.menu.exit = Beenden
 plugins.optional.streamsharingtool.gui.menu.file = Datei
 plugins.optional.streamsharingtool.gui.menu.help = Hilfe
