-updated language files

--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -63,6 +63,10 @@ convert.dialog.chooseformat = Select a dateformat
 convert.dialog.keepformat = Use this format for this session
 convert.progress.convertingto = convert to
 convert.progress.unknownintype = Unknown format
+decrypter.invalidaccount = No valid account found
+decrypter.unknownerror = Unknown error
+decrypter.wrongcaptcha = Wrong captcha code
+decrypter.wrongpassword = Wrong password
 download.chunks.connection = connection
 download.chunks.label = Chunks
 download.connection.idle = Idle
@@ -97,6 +101,7 @@ downloadlink.status.error.unknown = Unknown Error
 downloadlink.status.error_unexpected = Unexpected Error
 downloadlink.status.incomplete = Incomplete
 downloadlink.status.todo = Todo
+downloadlink.status.waitinguserio = Waiting for user input
 gui.accountcheck.pluginerror = Plugin %s may be defect. Inform support!
 gui.askName = What's your name?
 gui.btn_accept = Accept
@@ -119,6 +124,7 @@ gui.config.addons.install.tab = Installation & updates
 gui.config.addons.name = Network/Download
 gui.config.addons.settings.tab = Settings
 gui.config.btn_cancel = Cancel
+gui.config.btn_fengshui = Simple View
 gui.config.btn_restart = Save & Restart
 gui.config.btn_save = Save
 gui.config.captcha.jac_disable = Disable automatic captcha
@@ -173,6 +179,7 @@ gui.config.eventmanager.trigger = Trigger event
 gui.config.eventmanager.trigger.btn = Edit Trigger
 gui.config.fengshui.expertview = Advanced Configuration
 gui.config.fengshui.fritzbox.title = Detected Router: Fritz!Box
+gui.config.fengshui.fritzbox.upnp.checkbox = Show meesage never again
 gui.config.fengshui.fritzbox.upnpactive = You have a Fritz!Box router. Please enable UPNP for your fritz!box.
 gui.config.fengshui.fritzbox.upnpinactive = Please enable UPNP fo your Fritz!Box <br><a href="http://%s">to Fritz!Box Webinterface</a><br><a href="http://wiki.jdownloader.org/index.php?title=Fritz!Box_Upnp">Wiki: Fritz!Box Upnp</a>
 gui.config.fengshui.password = Password:
@@ -409,6 +416,7 @@ gui.downloadlink.status.wait = wait %s min
 gui.downloadlist.delete = Delete selected links ?
 gui.downloadlist.delete_downloadlinks = Remove completed downloads?
 gui.downloadlist.delete_packages = Remove completed packages?
+gui.downloadlist.reset = Reset selected downloads?
 gui.downloadlist.tooltip.connections = Act. connections:
 gui.downloadlist.tooltip.partnum = Parts:
 gui.downloadlist.tooltip.partsactive = Active:
@@ -474,6 +482,7 @@ gui.linkgrabber.menu.selection.premiummirror = Premium mirror selection
 gui.linkgrabber.menu.selection.priority = Priority
 gui.linkgrabber.menu.selection.prioritymirror = Mirror selection priority
 gui.linkgrabber.packageName = Package name:
+gui.linkgrabber.packagetab.chb.extractAfterdownload = Extract
 gui.linkgrabber.packagetab.lbl.comment = Comment
 gui.linkgrabber.packagetab.lbl.name = Packagename
 gui.linkgrabber.packagetab.lbl.password = Archiv password
@@ -503,6 +512,7 @@ gui.linkgrabber.tabs.context.newpackage = New package
 gui.linkgrabber.tabs.context.newPackage = New Package
 gui.linkgrabber.text = Here you can merge all collected links to one package and accept it later.
 gui.linkgrabber.title = Linkcollector active (D&D + Clipboard) %s Link(s) in %s Package(s)
+gui.linkgrabber.waitinguserio = Waiting for user input
 gui.linkgrabber.writeInfoFile = Write infoFile for this package
 gui.linkinfo.available = Available
 gui.linkinfo.available.notchecked = not checked
@@ -517,6 +527,7 @@ gui.linkinfo.file = File
 gui.linkinfo.filesize = Filesize
 gui.linkinfo.package = Package
 gui.linkinfo.password = Password
+gui.linkinfo.rate = Refreshrate
 gui.linkinfo.saveto = Save to
 gui.linkinfo.speed = Speed
 gui.linkinfo.title = Link Information: 
@@ -597,6 +608,7 @@ gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Support
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Install Addon(*.jdu)
+gui.menu.action.install.filefilter = JD Addons
 gui.menu.action.install.mnem = I
 gui.menu.action.install.name = Install Addon
 gui.menu.action.load.accel = CTRL+O
@@ -619,6 +631,12 @@ gui.menu.action.reconnect.accel = CTRL+R
 gui.menu.action.reconnect.desc = Do a manual reconnect
 gui.menu.action.reconnect.mnem = R
 gui.menu.action.reconnect.name = Manual reconnect
+gui.menu.action.remove.links.desc = Remove completed Downloads
+gui.menu.action.remove.links.name = Remove completed Downloads
+gui.menu.action.remove.packages.desc = Remove completed Packages
+gui.menu.action.remove.packages.name = Remove completed Packages
+gui.menu.action.restart.desc = restart JDownloader
+gui.menu.action.restart.name = Restart
 gui.menu.action.save.accel = CTRL+S
 gui.menu.action.save.desc = Save download list in DLC format
 gui.menu.action.save.mnem = S
@@ -651,12 +669,6 @@ gui.menu.action.wiki.accel = CTRL+W
 gui.menu.action.wiki.desc = Open jDownloader wiki
 gui.menu.action.wiki.mnem = W
 gui.menu.action.wiki.name = Open wiki
-gui.menu.action.restart.desc = restart JDownloader
-gui.menu.action.restart.name = Restart
-gui.menu.action.remove.packages.name = Remove completed Packages
-gui.menu.action.remove.packages.desc = Remove completed Packages
-gui.menu.action.remove.links.desc = Remove completed Downloads
-gui.menu.action.remove.links.name = Remove completed Downloads
 gui.menu.add = Add
 gui.menu.addons = Addons
 gui.menu.edit = Edit
@@ -681,6 +693,7 @@ gui.packageinfo.loaded = Loaded
 gui.packageinfo.name = Name
 gui.packageinfo.packagesize = Packagesize
 gui.packageinfo.password = Password
+gui.packageinfo.rate = Refreshrate
 gui.packageinfo.title = Package Information: 
 gui.plugins.decrypt.wiireloaded.calcresult = result of the calcualtion
 gui.reconnect.confirm = Do you want to reconnect your connection?
@@ -727,8 +740,10 @@ gui.table.contextmenu.editdownloadDir = Edit directory
 gui.table.contextmenu.editpackagename = Change package name
 gui.table.contextmenu.enable = Enable
 gui.table.contextmenu.enablepackage = Enable
+gui.table.contextmenu.extrassubmenu = Extras
 gui.table.contextmenu.info = Details
 gui.table.contextmenu.newpackage = Move in new package
+gui.table.contextmenu.package.extrasSubmenu = Extras
 gui.table.contextmenu.packagedownloadDir = Open directory
 gui.table.contextmenu.packageinfo = Details
 gui.table.contextmenu.packagesort = Sort Packages
@@ -784,6 +799,7 @@ init.webupdate.progress.1_title = Update check
 installer.aborted = Installation aborted!
 installer.abortInstallation = Error. abort installation
 installer.downloadDir = Download directory
+installer.error.noWriteRights = Error. You do not have permissions to write to the dir
 installer.title = jDownloader Installation
 installer.welcome = Welcome to JDownloader. The setup program will download some files.
 interaction.backup.name = Backup
@@ -904,7 +920,7 @@ linkinformation.comment.name = Comment
 linkinformation.download.aborted = Aborted
 linkinformation.download.activated = is enabled
 linkinformation.download.chunks.label = Chunks
-linkinformation.download.deactivated =  is enabled
+linkinformation.download.deactivated = is enabled
 linkinformation.download.name = Download
 linkinformation.download.notunderway = not in progress
 linkinformation.download.status = Status
@@ -975,6 +991,7 @@ plugins.container.dlc.extendedInfos = Ask for extended information at creation o
 plugins.container.dlc.showdialogoncreatedlc = Show Confirmationmessage after creation
 plugins.container.dlc.uploaderName = Include uploader name
 plugins.container.exit = Finished. Found %s links
+plugins.container.exit.error = Container error: %s
 plugins.container.found = Process %s links
 plugins.container.open = Open Container
 plugins.decrypt.cryptitcom.password = Folder is password protected. Enter password:
@@ -1001,6 +1018,9 @@ plugins.errors.error = Error:
 plugins.errors.pluginerror = Plugin error. Inform Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic limit reached
 plugins.errors.wrongpassword = Password wrong
+plugins.host.gigasize.freeaccount.pass = Password
+plugins.host.gigasize.freeaccount.use = Use Free account
+plugins.host.gigasize.freeaccount.user = Email
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = The %s plugin does not support the Accountinfo feature yet.
 plugins.host.premium.info.files = Files
@@ -1044,6 +1064,7 @@ plugins.optional.folderwatch.name = FolderWatch
 plugins.optional.httpliveheaderscripter.action.end = Exit Scripter
 plugins.optional.httpliveheaderscripter.action.start = Start Scripter
 plugins.optional.httpliveheaderscripter.gui.avefile = Save
+plugins.optional.httpliveheaderscripter.gui.desc = XML-File
 plugins.optional.httpliveheaderscripter.gui.importff.message = Insert your firefox Liveaheader Log here
 plugins.optional.httpliveheaderscripter.gui.importff.title = Import Firefox Live header Log
 plugins.optional.httpliveheaderscripter.gui.menu.edit = Edit
@@ -1088,6 +1109,7 @@ plugins.optional.jdlowspeed.minspeed = Min speed of a single download in kb/s
 plugins.optional.jdlowspeed.name = LowSpeed detection
 plugins.optional.jdlowspeed.rsonly = Observe only rapidshare.com
 plugins.optional.jdshutdown.name = JDShutdown
+plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.langfileeditor.addKey = Add Key
 plugins.optional.langfileeditor.adoptDefaults = Adopt Default(s)
 plugins.optional.langfileeditor.adoptDefaults.missing = Adopt Defaults of Missing Entries
@@ -1108,6 +1130,7 @@ plugins.optional.langfileeditor.editSelectedValues = Edit Selected Value(s)
 plugins.optional.langfileeditor.editValue = Edit Value
 plugins.optional.langfileeditor.entries = Entries
 plugins.optional.langfileeditor.file = File
+plugins.optional.langfileeditor.fileFilter = LanguageFiles (*.lng)
 plugins.optional.langfileeditor.firstKey = First Key
 plugins.optional.langfileeditor.key = Key
 plugins.optional.langfileeditor.keychart = KeyChart
@@ -1119,6 +1142,7 @@ plugins.optional.langfileeditor.languageFileValue = Language File Value
 plugins.optional.langfileeditor.name = JDLangFileEditor
 plugins.optional.langfileeditor.new = New
 plugins.optional.langfileeditor.ok = OK
+plugins.optional.langfileeditor.patternEntry = <Entry matches Pattern>
 plugins.optional.langfileeditor.pickMissingColor = Pick Color for Missing Entries
 plugins.optional.langfileeditor.pickOldColor = Pick Color for Old Entries
 plugins.optional.langfileeditor.reload = Reload
@@ -1166,6 +1190,7 @@ plugins.optional.streamsharingtool.action.validate.linksfound = Link(s) found!
 plugins.optional.streamsharingtool.gui.comment.defaultcomment = StreamingShare-DLC
 plugins.optional.streamsharingtool.gui.comment.question = Please enter your desired DLC-Comment:
 plugins.optional.streamsharingtool.gui.comment.title = Enter DLC-Comment:
+plugins.optional.streamsharingtool.gui.desc = StreamSharing-File
 plugins.optional.streamsharingtool.gui.menu.exit = Exit
 plugins.optional.streamsharingtool.gui.menu.file = File
 plugins.optional.streamsharingtool.gui.menu.help = Help
@@ -1199,6 +1224,7 @@ plugins.optional.trayIcon.speed4 = Speed 4:
 plugins.optional.trayIcon.speed5 = Speed 5:
 plugins.optional.trayIcon.startorstop = Start/Stop
 plugins.optional.trayIcon.stopafter = Stop after this Download
+plugins.optional.trayIcon.tooltipp = Tooltip active:
 plugins.optional.trayIcon.update = Update
 plugins.optional.webinterface.connections = Max. Connections
 plugins.optional.webinterface.https = Use HTTPS
