-updated XXBlogNet decrypter (password ..)

--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -179,7 +179,7 @@ gui.config.download.use_socks = Socks-Proxy Verwenden
 gui.config.eventmanager.btn_add = +
 gui.config.eventmanager.btn_remove = -
 gui.config.eventmanager.btn_settings = Einstellungen
-gui.config.eventmanager.column.action = nach oben!
+gui.config.eventmanager.column.action = Aktion
 gui.config.eventmanager.column.trigger = Auslöser
 gui.config.eventmanager.column.triggerDesc = Beschreibung des Auslösers
 gui.config.eventmanager.name = Eventmanager
